Avoid overflow of content

--- a/app/assets/stylesheets/layout/work_packages/_table.sass
+++ b/app/assets/stylesheets/layout/work_packages/_table.sass
@@ -185,6 +185,9 @@
         text-decoration: none
 
 .controller-work_packages
+  #content
+    height: 100%
+
   .icon-button, .sort-header, .action-icon
     cursor: pointer
 
